2011-11-29  Charlie Zender  <zender@uci.edu>

	* Quiet set-but-not-used warnings appearing since GCC 4.6+

2011-11-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.9 release procedure:
 	Changes since nco-4_0_8:
	cd ~/nco;cvs tag -d nco-4_0_9;cvs tag -d nco-4_0_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1

	* Update to Ubuntu 11.10 build chain and GCC 4.6

	* Re-base libtool using autoreconf -f -i
	This fixes some configure compile errors reported by Henry

2011-11-14  Charlie Zender  <zender@uci.edu>

	* Realized that ncwa was working on asymmetric weighting
	Added new test cases, also working. Unable to replicate Sentman	bug.

2011-11-12  Charlie Zender  <zender@uci.edu>

	* Add test cases to NCO_rgr.pl to detect TODO nco1026

	* Verify ncwa weighted average bug reported by Lori Sentman TODO nco1026

2011-10-25  Charlie Zender  <zender@uci.edu>

	* Make another backwards compatibility change to in_nomismatch.cdl

2011-10-20  Charlie Zender  <zender@uci.edu>

	* Implement l[l]round[f]() rounding patch suggested by Neil Davis
	Convert floating points to integers with lround(), lroundf(), llround(), and llroundf()
	Fixes unintended bias in packing with unrounded numbers
	Requires introducing <math.h> dependency in nco_cnf_typ.h and nco_rth_utl.h
	Causes unintended regressions in ncra, ncrcat

2011-10-09  Charlie Zender  <zender@uci.edu>

	* Tidy NCO_rgr.pl

2011-10-05  Henry Butowsky  <henryb@hush.com>

	* Fixed long standing problem with attribute propagation.
	scale_factor and add_offset were being propgated to the LHS.
	This caused problems when packed vars were on the RHS.
	These atts are now never propagated to the RHS.

2011-09-09  Charlie Zender  <zender@uci.edu>

	* Change "RAM size" to "size (in RAM)"

2011-09-07  Charlie Zender  <zender@uci.edu>

	* Burning Man! Rites of Passage! Wow.

2011-08-23  Charlie Zender  <zender@uci.edu>
