@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.447 2011-10-10 04:18:42 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.448 2011-12-02 00:28:48 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.0.9 are ready. 
 
@@ -27,6 +27,15 @@ Enjoy,
 Charlie
 
 Other "New stuff" in 4.0.9 summary (full details always in ChangeLog):
+
+A. Warn when appended variable has suspicious record length.
+   NCO forbids appending variables if dimension sizes do not match
+   between input and output files. Except for the record dimension.
+   For various reasons, it should be possible, and so NCO allows,
+   appending variables with differently sized record dimensions.
+   Now instead of doing this silently, NCO issues a warning.
+   Power users can still enjoy this "feature", while novice users 
+   will hopefully take heed of the warning.
 
 A. Fix overly-zealous ncap2 packing propagation:
    Thanks to Ken5746 for reporting this problem.
