@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.663 2011-10-21 00:45:55 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.664 2011-12-02 00:28:48 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -533,6 +533,7 @@ Stride works with DAP?;
 <li><b>NCO 4.0.9</b>: (<i>In Progress, features already in beta include the following</i>) 
 Fix over-zealous <tt>ncap2</tt> packing;
 Fix <tt>ncea -y ttl</tt>;
+Warn when appending variables of suspicious record length;
 <li><b>NCO 4.0.8</b>: (<i>Current Stable Release</i>) 
 Support <a href="http://nco.sf.net/nco.html#hpss">HPSS</a>;
 Workaround netCDF <tt>NOFILL</tt> <a href="#bug_nofill">bug</a> (<i>upgrade recommended</i>);
